# MLOps

./: .gitignore  CI_CD_SHOWCASE.md  CONTRIBUTING.md  DEMO.md  DEPLOYMENT.md  ENTERPRISE_SETUP.md  FILE_MANIFEST.md  Makefile  README_ENTERPRISE.md  RUN_CI_CD_ON_GITHUB.md  URL_CONFIGURATION_GUIDE.md  URL_QUICK_REFERENCE.md  mlflow_local.db  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml  deploy.yml  security-scan.yml
configs/: config.yaml
infra/docker/: .dockerignore  .env.example  Dockerfile  ci-cd-visualizer.html  dashboard.html  docker-compose.yml  prometheus.yml  validate.sh
infra/k8s/: deployment.yaml
src/mlops_enterprise/: api.py  cli.py  data.py  monitoring.py  registry.py  settings.py  train.py  utils.py  validation.py
tests/: conftest.py  test_smoke_imports.py  test_validation.py
